Fixed autopage headers on small screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -74,7 +74,7 @@ header {
 
 @media screen and (max-width: $break-small) {
 	.main {
-		padding: 40px 0px 0 !important;
+		padding: 50px 0px 0 !important;
 		border-radius: 0px;
 	}
 
@@ -94,7 +94,7 @@ header {
 
 @media screen and (max-width: $break-tiny) {
 	.main {
-		padding: 40px 0px 0 !important;
+		padding: 50px 0px 0 !important;
 		border-radius: 0px;
 	}
 }
