--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -44,4 +44,9 @@
 	font-weight: bold;
     margin: 0 auto;
 	margin-bottom: 0.5em;
+	
+	@media screen and (max-width: $break-small) {
+		margin-bottom: 0;
+		margin-top: 0.5em;
+	}
 }
